--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,1 +1,53 @@
-/* Empty. Add your own CSS if you like */
+.pane {
+  background-color: #f8f8f8;
+}
+
+.bar-stable .button.pressed {
+  color: #ef473a;
+}
+
+.tabs-top.tabs-striped .tab-item.tab-item-active, .tabs-top.tabs-striped .tab-item.active, .tabs-top.tabs-striped .tab-item.activated {
+  border-color: #ef473a;
+}
+.line {
+  background-color: #ef473a;
+}
+
+map {
+  display: block;
+  width: 100%;
+  height: 100%;
+
+}
+.scroll {
+  height: 100%;
+}
+
+.pb-text { color: #2854D7; }
+.cg-text { color: #6AA857; }
+.v-text { color: #6AA857; }
+.ss-text { color: #EEAA11; }
+.si-text { color: #EEAA11; }
+.sn-text { color: #EEAA11; }
+
+.bicon{width:40px;height:40px;text-indent:-1000em;background:url("/img/bicon.png") no-repeat 0 0;background-size:350px auto;display:inline-block;overflow:hidden;vertical-align:middle;}
+.bicon.s{background-position:0 0;}
+.bicon.ss{background-position:0 -200px;}
+.bicon.si{background-position:0 -250px;}
+.bicon.sl{background-position:0 -300px;}
+.bicon.sn{background-position:0 -350px;}
+.bicon.c{background-position:-50px 0;}
+.bicon.cg{background-position:-50px -200px;}
+.bicon.cb{background-position:-50px -250px;}
+.bicon.cr{background-position:-50px -300px;}
+.bicon.cy{background-position:-50px -350px;}
+.bicon.p{background-position:-100px 0;}
+.bicon.pg{background-position:-100px -200px;}
+.bicon.pb{background-position:-100px -250px;}
+.bicon.pr{background-position:-100px -300px;}
+.bicon.py{background-position:-100px -350px;}
+.bicon.v{background-position:-200px 0;}
+.bicon.a{background-position:-250px 0;}
+.bicon.bus{background-position:-300px -50px;}
+.bicon.n{background-position-y:0;}
+.bicon.b{background-position-y:-50px;}
