--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -3,7 +3,7 @@ Create tabs with an icon and label, using the tabs-positive style.
 Each tab's child <ion-nav-view> directive will have its own
 navigation history that also transitions its views in and out.
 -->
-<ion-tabs class="tabs-icon-top tabs-color-active-positive">
+<ion-tabs class="tabs-icon-top tabs-color-active-assertive tab-assertive">
 
   <!-- Bookmark Tab -->
   <ion-tab title="즐겨찾기" icon-off="ion-android-star-outline" icon-on="ion-android-star" href="#/tab/bookmark">
