--- a/www/templates/tab-more.html
+++ b/www/templates/tab-more.html
@@ -1,7 +1,7 @@
 <ion-view view-title="더보기">
   <ion-content>
     <ion-list class="list-inset">
-      <ion-item class="item-remove-animate item-icon-right" type="item-text-wrap" href="http://snubus.kr/notice" target="_blank">
+      <ion-item class="item-remove-animate item-icon-right" type="item-text-wrap" href="#/tab/notice">
         <h2>새로운 소식</h2>
         <i class="icon ion-chevron-right icon-accessory"></i>
       </ion-item>
@@ -16,6 +16,13 @@
         <h2>도움말</h2>
         <i class="icon ion-chevron-right icon-accessory"></i>
       </ion-item>
+    </ion-list>
+
+    <ion-list class="list-inset">
+      <a class="item" href="http://facebook.com/shaidea" target="_blank">
+        만든 사람들
+        <span class="item-note">@샤이디어</span>
+      </a>
     </ion-list>
   </ion-content>
 </ion-view>
