--- a/www/templates/tab-near.html
+++ b/www/templates/tab-near.html
@@ -1,6 +1,6 @@
 <ion-view view-title="주변정류장">
   <ion-content scroll="false">
-    <map on-create="mapCreated(map)"></map>
+    <map on-create="mapCreated(map)" data-tap-disabled="true"></map>
   </ion-content>
 
   <ion-footer-bar class="bar-stable">
