--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -11,7 +11,7 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
   <!-- Bus Tab -->
-  <ion-tab title="노선번호" icon-off="ion-android-bus" icon-on="ion-android-bus" href="#/tab/buses">
+  <ion-tab title="노선" icon-off="ion-android-bus" icon-on="ion-android-bus" href="#/tab/buses">
     <ion-nav-view name="tab-buses"></ion-nav-view>
   </ion-tab>
 
