--- a/www/templates/tab-bookmark.html
+++ b/www/templates/tab-bookmark.html
@@ -6,6 +6,8 @@
       </div>
     </div>
 
+    <p class="padding" ng-show="showHint">↑좋아요 눌러주세요~</p>
+
     <div class="card" ng-show="buses.length == 0">
       <div class="item item-text-wrap">
         즐겨찾기 정보가 없습니다.
