--- a/www/templates/bus-detail.html
+++ b/www/templates/bus-detail.html
@@ -17,7 +17,7 @@
 <ion-view view-title="노선정보">
   <ion-content class="padding">
     <h4 class="{{bus.busType}}-text">{{bus.name}}</h4>
-    <p>{{bus.description}}</p>
+    <p>{{bus.description}}, {{running}}</p>
 
     <div class="button-bar bar-light">
       <a class="button" ng-class="{'button-stable': tab==1}" ng-click="tabChanged(1)">경로</a>
@@ -26,7 +26,7 @@
 
     <ion-list ng-show="tab == 1">
       <ion-item type="item-text-wrap" class="item-icon-right" ng-show="bus.stations.length > 0">
-        <h2>*실시간 위치는 현재 지원하지 않습니다.<br/>(6월중 지원예정)</h2>
+        <h2 style="white-space: normal;">[베타 테스트] 실시간 위치는 부정확할 수 있습니다.</h2>
       </ion-item>
       <ion-item type="item-text-wrap" class="item-icon-right" ng-show="bus.stations.length == 0">
         <h2>*경로 정보가 부족합니다.</h2>
@@ -34,7 +34,8 @@
       <ion-item ng-repeat="station in bus.stations" type="item-text-wrap" class="item-icon-right">
         <h2>{{station.name}}</h2>
         <p>{{station.description}}</p>
-        <i class="icon line">&nbsp;</i>
+        <i class="icon line {{station.speedType}}">&nbsp;</i>
+        <i class="icon ion-android-bus" ng-show="station.hasBus" style="margin-right: -12px"></i>
       </ion-item>
     </ion-list>
 
